# config-writer-json

./: LICENSE  README.md  setup.cfg
config_writer/: __init__.py  config.py
pyconfig/: config.py
