[metadata]
# replace with your username:
name = config-writer-json
version = 0.0.1
author = Glenn Bitar
author_email = glennbitar@gmail.com
description = Simple json-based config-writer for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glennib/config-writer-json
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
